# MyProject

./: CMakeLists.txt  CPackConfig.cmake  Jenkinsfile  LICENSE  README.md
.github/workflows/: Jenkinsfile  cmake-multi-platform.yml
cmake/: Config.cmake.in  CrossPlatform.cmake  Dependencies.cmake  generateDoc.cmake
docs/: Doxyfile.in
include/: MyLibrary.h
src/: MyLibrary.cpp  main.cpp
tests/: CMakeLists.txt  test_main.cpp
